# DEV-UTIL-FORTRAN-fchk

./: README.md  fchk290s.txt  os2port.notes  os2port.txt  readme.os2
ftnchek-2.9.0/: INSTALL  Makefile.in  PATCHES  README  blurb.txt  configure  configure.in  dcl2inc.awk  dcl2inc.doc  dcl2inc.man  dcl2inc.ps  dcl2inc.sh.in  exprtype.c  forlex.c  fortran.c  fortran.y  ftnchek.c  ftnchek.doc  ftnchek.h  ftnchek.hlp  ftnchek.man  ftnchek.ps  install-sh  intrins.h  iokeywds.h  keywords.h  makefile.bc  makefile.generic  makefile.mpw  makefile.os2  makefile.unix  pgsymtab.c  plsymtab.c  project.c  shell_mung.c  symtab.c  symtab.h  tokdefs.h
ftnchek-2.9.0/test/: Compare.sh  Makefile.in  backslash.opt  chestnuts.opt  comcmp.opt  comusage.opt  dectab.opt  do_enddo.f  intrinstest.f  t208x.f
ftnchek-2.9.0/test/Okay/: args01.fc1  args01.fc3  args02.fc0  args02.fc2  args03.fc0  args03.fc2  args04.fc0  args04.fc3  args05.fc1  args05.fc2  args06.fc0  args06.fc3  args07.fc1  args07.fc3  args08.fc0  args08.fc2  args09.fc1  args09.fc3  args10.fc1  args10.fc2  args11.fc1  args11.fc3  args12.fc1  args13.fc0  args13.fc2  args14.fc3  args15.fc0  args15.fc3  arrayclash.fc0  arrayclash.fc1  arrayclash.fc2  arrayclash.fc3  assign.fc1  assign.fc2  assign.fc3  assign.fc4  assign.fc5  assign.fc6  assign.fc8  assign.fcA  (+254 more)
